--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,10 @@ dist
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
-
+/public
+.firebase/
+.firebaserc
+.firebase.json
 # vuepress build output
 .vuepress/dist
 
